--- a/main.html
+++ b/main.html
@@ -10,7 +10,7 @@
 		table,tr,th,td{
 			border:1px solid black;
 			background-color:yellow;
-			padding:10px
+			padding:10px;
 		}
 	</style>
 </head>
