--- a/main.html
+++ b/main.html
@@ -15,7 +15,7 @@
 	 <script type="text/javascript" src="./script.js">
 </script>	
 	<table>
-		<caption>Students Details</caption>
+		<caption>Student Details</caption>
 		<tr>
 			<th>NAME</th>
 			<th>AGE</th>
